tests/success/pointer_arithmetic_resolve8.bz
function test()
{
	(consteval {
		let p: ?*S = null;
		if (p != null)
		{
			p - p;
		}
	});
}

struct S
{
	.i: int32;
}
