tests/error/comptime/compare_pointers_null1.bz
function test()
{
	(consteval {
		let i = 0;
		let p: ?*int32 = null;
		&i < p;
	});
}
